<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login_alpha"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_start_tv_text1_marginTop"
            android:gravity="center"
            android:text="@string/activity_start_text1"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_start_tv_text1_marginTop"
            android:gravity="center"
            android:text="@string/activity_start_text2"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_small" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_start_btn_height"
            android:layout_marginLeft="@dimen/activity_start_btn_marginLeft"
            android:layout_marginRight="@dimen/activity_start_btn_marginLeft"
            android:background="@drawable/shape_bg_blue"
            android:drawableLeft="@drawable/ic_fb"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_start_btn_paddingLeft"
            android:paddingRight="@dimen/activity_start_btn_paddingLeft"
            android:text="@string/activity_start_facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_normal" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_start_btn_height"
            android:layout_marginLeft="@dimen/activity_start_btn_marginLeft"
            android:layout_marginRight="@dimen/activity_start_btn_marginLeft"
            android:layout_marginTop="@dimen/activity_start_btn_marginTop"
            android:background="@drawable/shape_bg_gray_light"
            android:drawableLeft="@drawable/ic_email"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_start_btn_paddingLeft"
            android:paddingRight="@dimen/activity_start_btn_paddingLeft"
            android:text="@string/activity_start_email"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_textSize_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_start_tv_text3_marginTop"
            android:layout_marginTop="@dimen/activity_start_tv_text3_marginTop"
            android:gravity="center"
            android:text="@string/activity_start_text3"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_small" />
    </LinearLayout>

</RelativeLayout>