<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_sign_up_detail_header_height"
        android:background="@color/green"
        android:paddingLeft="@dimen/activity_sign_up_detail_header_paddingLeft"
        android:paddingRight="@dimen/activity_sign_up_detail_header_paddingLeft" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_normal" />

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_sign_up_detail_title"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_huge"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <requestFocus />

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/activity_sign_up_detail_avatar_width"
                android:layout_height="@dimen/activity_sign_up_detail_avatar_width"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_sign_up_detail_avatar_marginBottom"
                android:layout_marginTop="@dimen/activity_sign_up_detail_avatar_marginTop"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_sign_up_detail_text1"
                android:textColor="@color/gray"
                android:textSize="@dimen/default_textSize_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_sign_up_detail_tv_text2_marginTop"
                android:gravity="center"
                android:text="@string/activity_sign_up_detail_text2"
                android:textColor="@color/gray"
                android:textSize="@dimen/default_textSize_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_sign_up_detail_row_marginTop"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_sign_up_detail_row_paddingLeft" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_sign_up_detail_row_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="@dimen/activity_sign_up_detail_label_width"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/activity_sign_up_detail_username"
                        android:textColor="@color/green"
                        android:textSize="@dimen/default_textSize_normal"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/activity_sign_up_detail_icon_width"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_profile" />

                    <EditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:hint="@string/activity_sign_up_detail_username_hint"
                        android:inputType="textPersonName"
                        android:paddingLeft="@dimen/activity_sign_up_detail_et_paddingLeft"
                        android:paddingRight="@dimen/activity_sign_up_detail_et_paddingLeft"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textSize_normal" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_sign_up_detail_row_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="@dimen/activity_sign_up_detail_label_width"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/activity_sign_up_detail_email"
                        android:textColor="@color/green"
                        android:textSize="@dimen/default_textSize_normal"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/activity_sign_up_detail_icon_width"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_email_small" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:hint="@string/activity_sign_up_detail_email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/activity_sign_up_detail_et_paddingLeft"
                        android:paddingRight="@dimen/activity_sign_up_detail_et_paddingLeft"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textSize_normal" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_sign_up_detail_row_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_label_city"
                        android:layout_width="@dimen/activity_sign_up_detail_label_width"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/activity_sign_up_detail_city"
                        android:textColor="@color/green"
                        android:textSize="@dimen/default_textSize_normal"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_city"
                        android:layout_width="@dimen/activity_sign_up_detail_icon_width"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/tv_label_city"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_location" />

                    <Button
                        android:id="@+id/btn_city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/iv_arrow"
                        android:layout_toRightOf="@+id/iv_city"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:gravity="left|center_vertical"
                        android:hint="@string/activity_sign_up_detail_city_hint"
                        android:paddingLeft="@dimen/activity_sign_up_detail_et_paddingLeft"
                        android:paddingRight="@dimen/activity_sign_up_detail_et_paddingLeft"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textSize_normal" />

                    <ImageView
                        android:id="@+id/iv_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_sign_up_detail_arrow_marginRight"
                        android:layout_marginRight="@dimen/activity_sign_up_detail_arrow_marginRight"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_arrow" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>