<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_sign_up_layout_marginTop"
        android:background="@drawable/bg_login_alpha"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <requestFocus />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_sign_up_iv_marginTop"
            android:layout_marginTop="@dimen/activity_sign_up_iv_marginTop"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email_white" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_forgot_password_tv_marginTop"
            android:gravity="center"
            android:text="@string/activity_forgot_password_title"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_small" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_start_btn_height"
            android:layout_marginLeft="@dimen/activity_start_btn_marginLeft"
            android:layout_marginRight="@dimen/activity_start_btn_marginLeft"
            android:layout_marginTop="@dimen/activity_sign_up_btn_marginTop"
            android:background="@drawable/shape_bg_gray_light"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/activity_sign_up_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/default_textSize_normal" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_start_btn_height"
            android:layout_marginLeft="@dimen/activity_start_btn_marginLeft"
            android:layout_marginRight="@dimen/activity_start_btn_marginLeft"
            android:layout_marginTop="@dimen/activity_sign_up_btn_marginTop"
            android:background="@drawable/shape_bg_green"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_start_btn_paddingLeft"
            android:paddingRight="@dimen/activity_start_btn_paddingLeft"
            android:text="@string/activity_forgot_password_send"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textSize_normal" />
    </LinearLayout>

</RelativeLayout>